Move segment boundaries from job to media